# capstone-project-encode

./: .gitignore  README.md  flake.nix  package-lock.json  pnpm-lock.yaml
anchor/: Anchor.toml
anchor/programs/capstoneprojectencode/: Cargo.toml
anchor/programs/capstoneprojectencode/src/: lib.rs
anchor/src/: capstoneprojectencode-exports.ts  index.ts
anchor/tests/: capstoneprojectencode.spec.ts
off-chain-client/: Cargo.toml
off-chain-client/src/: main.rs
src/: types.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/capstoneprojectencode/: page.tsx
src/components/capstoneprojectencode/: capstoneprojectencode-data-access.tsx  capstoneprojectencode-feature.tsx  capstoneprojectencode-ui.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/solana/: solana-provider.tsx
src/components/ui/: ui-layout.tsx
src/components/validator-table/: validator-table.tsx
