[package]
name = "off-chain-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1.6"
solana-pubkey = "2.1.6"
solana-sdk = "2.1.6"
solana-program = "2.1.6"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3", features = ["cors"] }
http = "0.2"
